# ZDEM_Salt_Kinematics

./: .dockerignore  .editorconfig  .env.example  .gitignore  01_data_extractor.py  01b_manual_corrector.py  02_plot_single_diagnostic.py  03_plot_multi_comparison.py  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  config.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml
copyright/: Dockerfile  temp_model_context.json
copyright/软件著作权申请资料/: 截图方式确认.json  环境检查.json  环境检查.md  环境确认.json
copyright/软件著作权申请资料/analysis/: project.json
copyright/软件著作权申请资料/正式资料/: ZDEM盐体运动学分析系统-代码(全部).docx  ZDEM盐体运动学分析系统_操作手册.docx  生成报告.md  申请表信息.txt
copyright/软件著作权申请资料/草稿/: 业务理解.json  业务理解.md  业务理解模型稿模板.json  业务理解证据.json  业务理解证据.md  代码-全部.md  代码提取清单.json  代码提取清单.md  代码文件候选清单.md  代码文件选择.json  操作手册.md  操作手册自检记录.json  操作手册自检记录.md  最终生成确认.json  申请表信息.md  申请表字段确认.json
docs/: index.md
tests/: test_smoke.py  test_surface_profile.py
zdem_salt_kinematics/: __init__.py  utils.py
