[project]
name = "zdem-salt-kinematics"
version = "0.1.0"
description = "ZDEM_Salt_Kinematics"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "matplotlib>=3.4.0",
  "scipy>=1.7.0",
  "tqdm>=4.60.0",
  "python-dotenv>=0.19.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
