[project]
name = "zdem-salt-kinematics"
version = "1.0.0"
description = "ZDEM salt kinematics analysis: geometry evolution metrics and publication-grade plots"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Phoenix0531-sudo" }]
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "matplotlib>=3.4.0",
  "scipy>=1.7.0",
  "tqdm>=4.60.0",
  "python-dotenv>=0.19.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zdem_salt_kinematics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["demo_output", "docs", ".venv"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
